--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -24,7 +24,9 @@
      slower_received_message = original_message_hash[:slower_received_message]
      if slower_received_message
        max_data_full << [date, slower_received_message.delay]
-       max_data_per_account[slower_received_message.account_id] << [date, slower_received_message.delay]
+       if slower_received_message.delay > 60
+         max_data_per_account[slower_received_message.account_id] << [date, slower_received_message.delay]
+       end
      end
      original_messages_by_id[original_message.id] = original_message
    end
