--- a/views/account/show.html.erb
+++ b/views/account/show.html.erb
@@ -1,4 +1,4 @@
-<div id="graphTitle">Délai d'arrivée des mails en secondes</div>
+<div id="graphTitle">Nombre de secondes nécessaires pour que des mails partant de rezo.net parviennent à ce compte.</div>
 
 <div class="graph" id="graphAccount"></div>
 
