--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -1,4 +1,4 @@
-<div id="graphTitle">Délai d'arrivée des mails en secondes</div>
+<div id="graphTitle">Nombre de secondes nécessaires pour que des mails partant de rezo.net arrivent chez différents comptes.</div>
 
 <div class="graph" id="graphGeneral"></div>
 
