--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -107,12 +107,12 @@
   <% else %>
   var showPoints = false;
   var minDisplayed = null;
-  var maxDisplayed = null;
+  var maxDisplayed = <%= DateTime.now.strftime("%Q") %>;
   <% end %>
   <% else %>
   var showPoints = true;
   var minDisplayed = null;
-  var maxDisplayed = null;
+  var maxDisplayed = <%= DateTime.now.strftime("%Q") %>;
   <% end %>
 
   plotGeneral();
